platform/kustomize/base/corpshared-obs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drr-corpshared-obs
  labels:
    darueira.io/tier: enterprise-shared
    darueira.io/subsystem: observability
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
